CorrectionPopupWrap

--- a/blocks/popup/__wrap/popup__wrap.css
+++ b/blocks/popup/__wrap/popup__wrap.css
@@ -3,7 +3,6 @@
   display: flex;
   flex-direction: column;
   color: #000;
-  max-width: 430px;
   margin: auto;
   position: relative;
 }
